force-app/main/default/objects/Locker_Reservation__c/Locker_Reservation__c.object-meta.xml
<CustomObject>
    <description>Created by JW
For Hashtag workflow
Allows a locker and lock to be added to a Hashtag membership.</description>
    <label>Locker Reservation</label>
    <nameField>
        <displayFormat>LR-{0000}</displayFormat>
        <label>Locker Reservation #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Locker Reservations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>