force-app/main/default/objects/Locker_Reservation__c/fields/Lock__c.field-meta.xml
<CustomField>
    <fullName>Lock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The physical lock associated with this member locker.</description>
    <label>Lock</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The value must be a Lock.</errorMessage>
        <filterItems>
            <field>Supply__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Lock</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Supply__c</referenceTo>
    <relationshipLabel>Locker Reservations</relationshipLabel>
    <relationshipName>Member_Lockers</relationshipName>
    <type>Lookup</type>
</CustomField>