force-app/main/default/objects/Locker_Reservation__c/fields/Locker__c.field-meta.xml
<CustomField>
    <fullName>Locker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The locker associated with the membership record.</description>
    <label>Locker</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value must be a Locker.</errorMessage>
        <filterItems>
            <field>Space__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Locker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Space__c</referenceTo>
    <relationshipLabel>Locker Reservations</relationshipLabel>
    <relationshipName>Member_Lockers</relationshipName>
    <type>Lookup</type>
</CustomField>