force-app/main/default/objects/Locker_Reservation__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by JW
The membership that this locker/lock are assigned to.</description>
    <label>Membership</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Locker Reservations</relationshipLabel>
    <relationshipName>Member_Lockers</relationshipName>
    <type>Lookup</type>
</CustomField>