force-app/main/default/objects/Locker_Reservation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Member_Name__c</columns>
    <columns>Membership__c</columns>
    <columns>Lock__c</columns>
    <columns>Locker__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>